--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +13,16 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "mariadb": "^3.1.2",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.31.1",
+    "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
     "tslint": "^6.1.3",
+    "typeorm": "^0.3.16",
     "typescript": "^5.1.0-dev.20230512"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
