--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "mariadb": "^3.1.2",
-    "mysql": "^2.18.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.1",
     "sequelize": "^6.31.1",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
